# lmux

./: .gitignore  Makefile  README.md  browser.h  build-browser.sh  build.sh  cli.c  compile_commands.json  focus_commands.h  lmux  lmux.desktop  lmux_css.h  main_gui.c  meson.build  meson_options.txt  notification.h  shortcuts_help.h  simple_terminal.h  socket_server.c  socket_server.h  terminal_commands.c  test_browser.c  test_browser_devtools.c  test_browser_unit.c  test_cli.c  test_cross_feature.sh  test_debug.c  test_gtk4.c  test_runner.sh  test_session_persistence.c  test_shortcuts.py  test_terminal_commands.c  verify_test.py  verify_test.sh  vte_terminal.h  window_decorations.h  workspace_commands.c  workspace_dialogs.h
.factory/: init.sh  services.yaml
.factory/skills/backend-worker/: SKILL.md
.factory/validation/api/scrutiny/: synthesis.json
.factory/validation/api/user-testing/: synthesis.json
.factory/validation/browser/scrutiny/: synthesis.json
.factory/validation/browser/user-testing/: synthesis.json
.factory/validation/build-setup/scrutiny/: synthesis.json
.factory/validation/build-setup/user-testing/: synthesis.json
.factory/validation/integration/scrutiny/: synthesis.json
.factory/validation/integration/user-testing/: synthesis.json
include/: app_state.h  browser.h  ghostty_terminal.h  layer_shell.h  session_persistence.h  settings.h  socket_server.h  terminal_backend.h  terminal_commands.h  vte_terminal.h  workspace_commands.h
include/daemon/: lmuxd-core.h  lmuxd-dbus.h  lmuxd-pty.h  lmuxd-socket.h
scripts/: e2e-test.sh
src/: browser.c  focus_commands.c  ghostty_terminal.c  layer_shell.c  lmux_css.c  main_gui.c  notification.c  session_persistence.c  settings.c  shortcuts_help.c  sidebar.c  socket_server.c  terminal_backend.c  vte_terminal.c  window_decorations.c  workspace_dialogs.c
src/daemon/: lmuxd-core.c  lmuxd-dbus.c  lmuxd-main.c  lmuxd-pty.c  lmuxd-socket.c
tests/: test_browser_split.c  test_debug2.c  test_focus_commands.c  test_integration.c  test_socket_server.c  test_workspace_commands.c
(+32 files in other folders)
